# crypto_portfolio

./: .gitignore  README.md  pyproject.toml
data/: BTC_price.csv  BTC_returns.csv  ETH_price.csv  ETH_returns.csv  industry_returns.csv  sp500_returns.csv
experiments/: analyze.ipynb  backtests.ipynb  compare.ipynb  dd90-10.ipynb  export_data.ipynb
experiments/cache/: CRA.csv  DD_ewma.csv  DD_garch.csv  times.csv
experiments/utils/: alpha_utils.py  backtest.py  markowitz.py  metrics.py  shapley.py  stats_utils.py  tuning.py  utils.py
